@@ -274,8 +274,6 @@ void writeSymbol(symbolObj *s, FILE *stream)
 {
   int i;
 
-  if(s->inmapfile != MS_TRUE) return;
-
   fprintf(stream, "  SYMBOL\n");
   if(s->name != NULL) fprintf(stream, "    NAME \"%s\"\n", s->name);
   
@@ -726,17 +724,16 @@ symbolObj *msRemoveSymbol(symbolSetObj *symbolset, int nSymbolIndex) {
 }
 
 int msSaveSymbolSetStream(symbolSetObj *symbolset, FILE *stream) {
-    int i;
-    if (!symbolset || !stream) {
-        msSetError(MS_SYMERR, "Cannot save symbolset.", "msSaveSymbolSetStream()");
-        return MS_FAILURE;
-    }
-    /* Don't ever write out the default symbol at index 0 */
-    for (i=1; i<symbolset->numsymbols; i++) {
-        symbolset->symbol[i]->inmapfile = MS_TRUE;
-        writeSymbol((symbolset->symbol[i]), stream);
-    }
-    return MS_SUCCESS;
+  int i; 
+  if (!symbolset || !stream) { 
+    msSetError(MS_SYMERR, "Cannot save symbolset.", "msSaveSymbolSetStream()"); 
+    return MS_FAILURE; 
+  } 
+  /* Don't ever write out the default symbol at index 0 */ 
+  for (i=1; i<symbolset->numsymbols; i++) { 
+    if(!symbolset->symbol[i]->inmapfile) writeSymbol((symbolset->symbol[i]), stream); 
+  } 
+  return MS_SUCCESS;
 }
 
 int msSaveSymbolSet(symbolSetObj *symbolset, const char *filename) {
